[package]
name = "nosman"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = false       # Strip symbols from binary*

[dependencies]
clap = "4.5.4"
err-derive = "0.3.1"
indicatif = "0.17.8"
dirs = "5.0.1"
log = "0.4.21"
tempfile = "3.10.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
zip = "2.1.3"
colored = "2"
include_dir = "0.7.3"
dunce = "1.0.4"
pathdiff = "0.2.1"
globwalk = "0.9.1"
libloading = "0.8.3"
self-replace = "1.3.7"
bitflags = "2.5.0"
glob = "0.3.1"
glob-match = "0.2.1"
path-slash = "0.2.1"
rm_rf = "0.6.2"
sysinfo = "0.30.12"
native-dialog = "0.7.0"
fs-more = "0.6.0"
filetime = "0.2.23"
linked_hash_set = "0.1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }

[build-dependencies]
vergen = { version = "7.5.1", default-features = false, features = ["build"]}
anyhow = "1.0.83"
